# sphinxcontrib-htmlhelp

./: .gitignore  CHANGES  CHANGES.rst  MANIFEST.in  README.rst  babel.cfg  pyproject.toml  release-checklist.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: create-release.yml  test.yml  transifex.yml
sphinxcontrib/htmlhelp/: __init__.py  version.py
tests/: test_htmlhelp.py
tests/roots/test-basic/: conf.py
tests/roots/test-chm/: conf.py
tests/roots/test-hhc/: conf.py
