[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# project metadata
[project]
name = "sphinxcontrib-htmlhelp"
description = "sphinxcontrib-htmlhelp is a sphinx extension which renders HTML help files"
readme = "README.rst"
urls.Changelog = "https://www.sphinx-doc.org/en/master/changes.html"
urls.Code = "https://github.com/sphinx-doc/sphinxcontrib-htmlhelp"
urls.Download = "https://pypi.org/project/sphinxcontrib-htmlhelp/"
urls.Homepage = "https://www.sphinx-doc.org/"
urls."Issue tracker" = "https://github.com/sphinx-doc/sphinx/issues"
license.text = "BSD-2-Clause"
requires-python = ">=3.8"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "html5lib",
]
lint = [
    "flake8",
    "mypy",
    "docutils-stubs",
]

[[project.authors]]
name = "Georg Brandl"
email = "georg@python.org"

[tool.setuptools.dynamic]
version.attr = "sphinxcontrib.htmlhelp.__version__"
